# LBM

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
lbm-wgpu/: Cargo.toml
lbm-wgpu/.cargo/: config.toml
lbm-wgpu/pkg/: lbm_wgpu.d.ts  lbm_wgpu.js  lbm_wgpu_bg.wasm  lbm_wgpu_bg.wasm.d.ts  package.json
lbm-wgpu/src/: driver.rs  lbm.rs  lib.rs
lbm-wgpu/src/barrier_shapes/: blob.rs
lbm-wgpu/src/rewritten_shaders/: render.wgsl
lbm-wgpu/src/rewritten_shaders/collision/: cardinal_collision.wgsl
lbm-wgpu/src/rewritten_shaders/color_map/: inferno.wgsl  jet.wgsl  viridis.wgsl
lbm-wgpu/src/rewritten_shaders/stream/: e_w_stream.wgsl  n_s_stream.wgsl  ne_sw_stream.wgsl  se_nw_stream.wgsl
lbm-wgpu/src/rewritten_shaders/summary_stats/: ux.wgsl
lbm-wgpu/src/rewritten_shaders/update_barrier/: barrier_erase.wgsl
lbm-wgpu/src/testing/: test-e-w.wgsl  test-nw-se.wgsl
rust-code/: Cargo.toml
rust-code/src/: cool_shapes.txt  lbm.rs  lib.rs
rust-code/src/barrier_shapes/: curve.rs  curve_collection.rs  line.rs  merge_shapes.rs  mod.rs
rust-code/src/rewritten_shaders/collision/: corner_collision.wgsl
rust-code/src/rewritten_shaders/pre_collision/: cardinal_pre_collision.wgsl  corner_pre_collision.wgsl
rust-code/src/rewritten_shaders/summary_stats/: curl.wgsl  rho.wgsl  speed.wgsl  uy.wgsl
rust-code/src/rewritten_shaders/update_barrier/: barrier_draw.wgsl
rust-code/src/testing/: test-n-s.wgsl  test-ne-sw.wgsl
src/: main.ts  style.css
src/components/: app.ts  invalidDevice.ts  simulation.ts  tutorial.ts  welcome.ts
