[package]
name = "lbm-wgpu"
version = "0.1.0"
edition = "2021"
authors = ["Paul Pluscht <www.linkedin.com/in/paul-pluscht>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
winit = "0.28"
bytemuck = "1.13.1"
env_logger = "0.10"
wgpu = "0.16"
line_drawing = "1.0.0"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Gpu",
]}
wasm-bindgen-futures = "0.4.37"
